# gradleEtaLibraryFromJava

./: .gitignore  build.gradle  scratch.cabal  settings.gradle
src/main/eta/Scratch/: Scratch.hs
src/main/java/com/jrciii/: Scratchy.java
