name:                scratch
version:             0.0.1
license:             AllRightsReserved
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Scratch.Scratch
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src/main/eta
  default-language:    Haskell2010

executable dummy
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src/main/eta
  default-language:    Haskell2010
  main-is:             Scratch/Main.hs
